test/typechecker.d/invalid/fns6.souc.bad
n: Integer = 5

f(x: Integer): Integer = x + 1

g(x: Integer): Integer = do
	return x & n
